# Nemerical

./: Addition_of_2_matrix.c  Bisection_method.c  CMakeLists.txt  Inverse_of_a_matrix.c  Lagrange_Interpolation.c  Multiplication_of_2_matrix.c  Newton_Raphson.c  Newtons_Backward_Interpolation.c  Newtons_Difference.c  Newtons_Forward_Interpolation.c  README.md  Regula_Falsi.c  SubtractMatrix_of_2_matrix .c  Transpose_of_a_matrix.c  index.csv  sub_of_2_matrix.c  sum_of_2_matrix.c
