cmake_minimum_required(VERSION 3.28)
project(Numerical C)

set(CMAKE_C_STANDARD 23)

add_executable(Bisection_method Bisection_method.c)
add_executable(Newtons_Forward_Interpolation Newtons_Forward_Interpolation.c)
add_executable(Newtons_Backward_Interpolation Newtons_Backward_Interpolation.c)
add_executable(Lagrange_Interpolation Lagrange_Interpolation.c)
